--- a/style.css
+++ b/style.css
@@ -1,57 +1,41 @@
-p {
-    text-align: center;
-}
-
 div{
     align-content: center;
-    position: absolute;
+    background-color: rgb(12, 10, 10);
+}
+
+h1 {
+    text-align: center;
+    background-color: rgb(12, 10, 10);
+    font-weight: bold;
+    align-self: center;
+    color: lightgray;
+    font-family: 'Staatliches', cursive;
+}
+
+body{
+    background-color: rgb(12, 10, 10);
+}
+
+.texto{
+    background-color: rgb(12, 10, 10);
+    color: lightgray;
+    font-size: small;
 }
 
 h4 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Staatliches', cursive;
     text-align: center;
     color: lightgray;
     background-color: rgb(12, 10, 10);
     font-weight: 300;
 }
-
-
-h1 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+p {
     text-align: center;
-    background-color: rgb(12, 10, 10);
-    font-weight: bold;
-    font-size: xx-large;
-    display: block;
-    width: 800px;
-    align-self: center;
-    color: lightgray;
 }
 
-.imagen{
-    width: 800px;
-    height: 300px;
-    align-self: center;
-    position: absolute;
-    top: 60.4px;
-}
-
-.texto{
-    width: 400px;
-    background-color: rgb(12, 10, 10);
-    color: lightgray;
-}
-
-.claseDeTexto{
-    top: 366px;
-}
-.claseDeLista{
-    top: 366px;
-    left: 420px;
-}
-
-body{
-    background-color: rgb(12, 10, 10);
+a {
+    color: gold;
+    
 }
 
 #neg{
@@ -102,7 +86,6 @@ body{
     color: pink;
 }
 
-a {
-    color: gold;
+ul{
+    font-size: small;
 }
-
